force-app/main/default/objects/Airliness__c/Airliness__c.object-meta.xml
<CustomObject>
    <label>Airliness</label>
    <nameField>
        <label>Airlines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airliness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>