force-app/main/default/objects/Airliness__c/fields/AirlinessId__c.field-meta.xml
<CustomField>
    <fullName>AirlinessId__c</fullName>
    <label>Airliness Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>