force-app/main/default/objects/Airliness__c/fields/HeadQuarters__c.field-meta.xml
<CustomField>
    <fullName>HeadQuarters__c</fullName>
    <label>Head Quarters</label>
    <length>255</length>
    <type>Text</type>
</CustomField>