force-app/main/default/objects/Airliness__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Logo__c</columns>
    <columns>NAME</columns>
    <columns>AirlinessId__c</columns>
    <columns>HeadQuarters__c</columns>
    <columns>Established__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>